Updates to prices

--- a/index.html
+++ b/index.html
@@ -153,9 +153,45 @@
             </div>
           </div>
 
+          <div class="col-lg-6 menu-item filter-breakfast">
+            <div class="menu-content">
+              <a href="#">3 Pancakes</a><span>$3.99</span>
+            </div>
+            <div class="menu-ingredients">
+            3 pancakes with side of syrup. Add sausage for $1
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-breakfast">
+            <div class="menu-content">
+              <a href="#">3 Eggs and Potato bowl</a><span>$5.50</span>
+            </div>
+            <div class="menu-ingredients">
+            3 scrambled eggs and pototoes, onions optional.
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-breakfast">
+            <div class="menu-content">
+              <a href="#">Home fries</a><span>$3.00</span>
+            </div>
+            <div class="menu-ingredients">
+            Freshly cooked home fries.
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-breakfast">
+            <div class="menu-content">
+              <a href="#">Breakfast burrito</a><span>$4.99</span>
+            </div>
+            <div class="menu-ingredients">
+            Eggs & cheese in tortilla.
+            </div>
+          </div>
+
           <div class="col-lg-6 menu-item filter-middle">
             <div class="menu-content">
-              <a href="#">Falafel</a><span>$4.99</span>
+              <a href="#">Falafel</a><span>$5.99</span>
             </div>
             <div class="menu-ingredients">
               Home made falafel on pita bread with hummus.
@@ -164,7 +200,7 @@
 
           <div class="col-lg-6 menu-item filter-middle">
             <div class="menu-content">
-              <a href="#">Gyro</a><span>$5.95</span>
+              <a href="#">Gyro</a><span>$6.99</span>
             </div>
             <div class="menu-ingredients">
               Beef or lamb on pita w/Tzatziki
@@ -173,7 +209,7 @@
 
           <div class="col-lg-6 menu-item filter-sandwich">
             <div class="menu-content">
-              <a href="#">Egg Salad</a><span>$3.50</span>
+              <a href="#">Egg Salad</a><span>$4.00</span>
             </div>
             <div class="menu-ingredients">
               Home made egg salad on your choice of bread.
